Further modifications to the template

--- a/report.tex
+++ b/report.tex
@@ -1,5 +1,4 @@
 \documentclass[12pt,a4paper,twoside]{report}
-% \documentclass[12pt,a4paper,twoside,openright]{report}
 
 \input{chapters/00_preamble}
 
@@ -9,7 +8,8 @@
 \include{chapters/02_coverpage}
 \include{chapters/03_abstract}
 \include{chapters/04_acknowledgements}
-\include{chapters/05_contents}
+\include{chapters/05_acronyms}
+\include{chapters/06_contents}
 
 \label{firstcontentpage} % start page count here
 \include{chapters/11_introduction}
@@ -23,5 +23,4 @@
 \include{chapters/21_bibliography}
 \include{chapters/22_appendices}
 
-\label{lastpage}
 \end{document}
