Add fixes for working locally

--- a/report.tex
+++ b/report.tex
@@ -1,6 +1,11 @@
 \documentclass[12pt,a4paper,twoside]{report}
-
 \input{chapters/00_preamble}
+
+% Select which version this is:
+% For the (anonymous) submission (without your name or acknowledgements)
+% uncomment the following line (or let the makefile do this for you)
+%\submissiontrue
+% For the final version (with your name) leave the above commented.
 
 \begin{document}
 
