--- a/report.tex
+++ b/report.tex
@@ -17,6 +17,7 @@
 
 \begin{document}
 
+%TC:ignore
 \pagenumbering{gobble}
 \include{chapters/01_titlepage}
 \include{chapters/02_coverpage}
@@ -27,18 +28,22 @@
 \include{chapters/06_glossary}
 \include{chapters/07_elements}
 \pagenumbering{arabic}
+%TC:endignore
 
 \label{firstcontentpage} % start page count here
 \include{chapters/11_introduction}
 \include{chapters/12_background}
 \include{chapters/13_related_work}
-\include{chapters/14_design_implementation}
-\include{chapters/15_evaluation}
-\include{chapters/16_summary_conclusions}
+\include{chapters/14_understanding_compiler_performance}
+\include{chapters/15_improving_compiler_performance}
+\include{chapters/16_evaluation}
+\include{chapters/17_summary_conclusions}
 \label{lastcontentpage} % end page count here
 
+%TC:ignore
 \include{chapters/21_bibliography}
 \include{chapters/22_appendices}
+%TC:endignore
 
 \end{document}
 
