Push many changes, including introduction and structuring

--- a/report.tex
+++ b/report.tex
@@ -35,7 +35,7 @@
 \include{chapters/12_background}
 \include{chapters/13_related_work}
 \include{chapters/14_understanding_compiler_performance}
-\include{chapters/15_improving_compiler_performance}
+\include{chapters/15_chapters}
 \include{chapters/16_evaluation}
 \include{chapters/17_summary_conclusions}
 \label{lastcontentpage} % end page count here
