Progress on related work

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,28 @@
+@book{alfred2007compilers,
+  title = {Compilers: {{Principles}}, {{Techniques}} \& {{Tools}}},
+  author = {Alfred, V Aho and Monica, S Lam and Jeffrey, D Ullman},
+  date = {2007},
+  edition = {2},
+  publisher = {pearson Education}
+}
+
+@inproceedings{amdahlValiditySingleProcessor1967,
+  title = {Validity of the Single Processor Approach to Achieving Large Scale Computing Capabilities},
+  booktitle = {Proceedings of the {{April}} 18-20, 1967, Spring Joint Computer Conference},
+  author = {Amdahl, Gene M.},
+  date = {1967-04-18},
+  series = {{{AFIPS}} '67 ({{Spring}})},
+  pages = {483--485},
+  publisher = {Association for Computing Machinery},
+  location = {New York, NY, USA},
+  doi = {10.1145/1465482.1465560},
+  url = {https://dl.acm.org/doi/10.1145/1465482.1465560},
+  urldate = {2025-01-13},
+  abstract = {For over a decade prophets have voiced the contention that the organization of a single computer has reached its limits and that truly significant advances can be made only by interconnection of a multiplicity of computers in such a manner as to permit cooperative solution. Variously the proper direction has been pointed out as general purpose computers with a generalized interconnection of memories, or as specialized computers with geometrically related memory interconnections and controlled by one or more instruction streams.},
+  isbn = {978-1-4503-7895-6},
+  file = {/Users/edjg/Zotero/storage/VRNQ8ZCL/Amdahl - 1967 - Validity of the single processor approach to achieving large scale computing capabilities.pdf}
+}
+
 @unpublished{aminiHowSlowMLIR2024,
   title = {How {{Slow}} Is {{MLIR}}?},
   author = {Amini, Mehdi and Nui, Jeff},
@@ -5,6 +30,24 @@
   url = {https://www.youtube.com/watch?v=7qvVMUSxqz4},
   eventtitle = {2024 {{European LLVM Developers}}' {{Meeting}}},
   venue = {Vienna, Austria}
+}
+
+@incollection{chatleyNext7000Programming2019,
+  title = {The {{Next}} 7000 {{Programming Languages}}},
+  booktitle = {Computing and {{Software Science}}: {{State}} of the {{Art}} and {{Perspectives}}},
+  author = {Chatley, Robert and Donaldson, Alastair and Mycroft, Alan},
+  editor = {Steffen, Bernhard and Woeginger, Gerhard},
+  date = {2019},
+  pages = {250--282},
+  publisher = {Springer International Publishing},
+  location = {Cham},
+  doi = {10.1007/978-3-319-91908-9_15},
+  url = {https://doi.org/10.1007/978-3-319-91908-9_15},
+  urldate = {2025-05-10},
+  abstract = {Landin’s seminal paper “The next 700 programming languages” considered programming languages prior to 1966 and speculated on the next 700. Half-a-century on, we cast programming languages in a Darwinian ‘tree of life’ and explore languages, their features (genes) and language evolution from the viewpoint of ‘survival of the fittest’.},
+  isbn = {978-3-319-91908-9},
+  langid = {english},
+  file = {/Users/edjg/Zotero/storage/8ZWWCKTL/Chatley et al. - 2019 - The Next 7000 Programming Languages.pdf}
 }
 
 @inproceedings{fehrIRDLIRDefinition2022a,
@@ -92,6 +135,22 @@
   file = {/Users/edjg/Zotero/storage/8MD74V8C/Laaber and Leitner - 2018 - An evaluation of open-source software microbenchmark suites for continuous performance assessment.pdf}
 }
 
+@article{landinNext700Programming1966,
+  title = {The next 700 Programming Languages},
+  author = {Landin, P. J.},
+  date = {1966-03-01},
+  journaltitle = {Commun. ACM},
+  volume = {9},
+  number = {3},
+  pages = {157--166},
+  issn = {0001-0782},
+  doi = {10.1145/365230.365257},
+  url = {https://dl.acm.org/doi/10.1145/365230.365257},
+  urldate = {2025-05-10},
+  abstract = {A family of unimplemented computing languages is described that is intended to span differences of application area by a unified framework. This framework dictates the rules about the uses of user-coined names, and the conventions about characterizing functional relationships. Within this framework the design of a specific language splits into two independent parts. One is the choice of written appearances of programs (or more generally, their physical representation). The other is the choice of the abstract entities (such as numbers, character-strings, list of them, functional relations among them) that can be referred to in the language.The system is biased towards “expressions” rather than “statements.” It includes a nonprocedural (purely functional) subsystem that aims to expand the class of users' needs that can be met by a single print-instruction, without sacrificing the important properties that make conventional right-hand-side expressions easy to construct and understand.},
+  file = {/Users/edjg/Zotero/storage/ZYESTFPK/Landin - 1966 - The next 700 programming languages.pdf}
+}
+
 @inproceedings{lattnerLLVMCompilationFramework2004,
   title = {{{LLVM}}: A Compilation Framework for Lifelong Program Analysis \& Transformation},
   shorttitle = {{{LLVM}}},
@@ -155,6 +214,24 @@
   file = {/Users/edjg/Zotero/storage/F3EKI2E6/docs.html}
 }
 
+@report{pep659,
+  type = {PEP},
+  title = {Specializing {{Adaptive Interpreter}}},
+  author = {{Mark Shannon}},
+  date = {2021},
+  number = {659},
+  url = {https://peps.python.org/pep-0659/}
+}
+
+@report{pep744,
+  type = {PEP},
+  title = {{{JIT Compilation}}},
+  author = {{Brandt Bucher} and {Savannah Ostrowski}},
+  date = {2024},
+  number = {744},
+  url = {https://peps.python.org/pep-0744/}
+}
+
 @article{saavedraPerformanceCharacterizationOptimizing1995,
   title = {Performance Characterization of Optimizing Compilers},
   author = {Saavedra, R.H. and Smith, A.J.},
@@ -172,6 +249,15 @@
   file = {/Users/edjg/Zotero/storage/7CTJVHTF/Saavedra and Smith - 1995 - Performance characterization of optimizing compilers.pdf}
 }
 
+@thesis{saeed2008systematic,
+  type = {phdthesis},
+  title = {Systematic Review of Verification \& Validation in Dynamic Languages},
+  author = {family=Saeed, given=FSM, given-i=FSM and Saeed, F},
+  date = {2008},
+  institution = {MS. Thesis, Blekinge Institute of Technology, Sweden},
+  file = {/Users/edjg/Zotero/storage/AUBRPYLN/Saeed and Saeed - 2008 - Systematic review of verification & validation in dynamic languages.pdf}
+}
+
 @online{tomdaleAdventuresMicrobenchmarking2017,
   title = {Adventures in {{Microbenchmarking}}},
   author = {{Tom Dale}},
@@ -180,4 +266,54 @@
   urldate = {2025-04-24},
   organization = {tomdale.net},
   file = {/Users/edjg/Zotero/storage/LRBUXXIR/adventures-in-microbenchmarking.html}
+}
+
+@online{whatsNewPython311,
+  title = {What’s {{New In Python}} 3.11},
+  author = {{Pablo Galindo Salgado}},
+  url = {https://docs.python.org/3/whatsnew/3.11.html},
+  urldate = {2025-05-10},
+  abstract = {Editor, Pablo Galindo Salgado. This article explains the new features in Python 3.11, compared to 3.10. Python 3.11 was released on October 24, 2022.},
+  langid = {english},
+  organization = {Python documentation},
+  file = {/Users/edjg/Zotero/storage/MCFX7GTA/3.11.html}
+}
+
+@online{whatsNewPython312,
+  title = {What’s {{New In Python}} 3.12},
+  author = {{Adam Turner}},
+  url = {https://docs.python.org/3/whatsnew/3.12.html},
+  urldate = {2025-05-10},
+  abstract = {Editor, Adam Turner,. This article explains the new features in Python 3.12, compared to 3.11. Python 3.12 was released on October 2, 2023. For full details, see the changelog. Summary – Release hi...},
+  langid = {english},
+  organization = {Python documentation},
+  file = {/Users/edjg/Zotero/storage/CC9F2RGA/3.12.html}
+}
+
+@online{whatsNewPython313,
+  title = {What’s {{New In Python}} 3.13},
+  author = {{Adam Turner} and {Thomas Wouters}},
+  url = {https://docs.python.org/3/whatsnew/3.13.html},
+  urldate = {2025-05-10},
+  abstract = {Editors, Adam Turner and Thomas Wouters. This article explains the new features in Python 3.13, compared to 3.12. Python 3.13 was released on October 7, 2024.},
+  langid = {english},
+  organization = {Python documentation},
+  file = {/Users/edjg/Zotero/storage/A2824J8Z/3.13.html}
+}
+
+@inproceedings{williamsDynamicInterpretationDynamic2010,
+  title = {Dynamic Interpretation for Dynamic Scripting Languages},
+  booktitle = {Proceedings of the 8th Annual {{IEEE}}/{{ACM}} International Symposium on {{Code}} Generation and Optimization},
+  author = {Williams, Kevin and McCandless, Jason and Gregg, David},
+  date = {2010-04-24},
+  series = {{{CGO}} '10},
+  pages = {278--287},
+  publisher = {Association for Computing Machinery},
+  location = {New York, NY, USA},
+  doi = {10.1145/1772954.1772993},
+  url = {https://dl.acm.org/doi/10.1145/1772954.1772993},
+  urldate = {2025-05-10},
+  abstract = {Dynamic scripting languages offer programmers increased flexibility by allowing properties of programs to be defined at run-time. Typically, program execution begins with an interpreter where type checks are implemented using conditional statements. Recent JIT compilers have begun removing run-time checks by specializing native code to program properties discovered at JIT time.This paper presents a novel intermediate representation for scripting languages that explicitly encodes types of variables. The dynamic representation is a flow graph, where each node is a specialized virtual instruction and each edge directs program flow based on control and type changes in the program. The interpreter thus performs specialized execution of whole programs. We present techniques for the efficient interpretation of our representation showing speed-ups of greater than 2x over static interpretation, with an average speed-up of approximately 1.3x.},
+  isbn = {978-1-60558-635-9},
+  file = {/Users/edjg/Zotero/storage/FW38FJTP/Williams et al. - 2010 - Dynamic interpretation for dynamic scripting languages.pdf}
 }
